# nrf52-quickstart

./: .gdbinit-openocd  Cargo.toml  README.md
src/: main.rs
